# image_processor

./: CMakeLists.txt  image.out  image_processor.cpp  readme.md
src/: bmp_reader.cpp  console_interface.cpp  filters.cpp  processor.cpp
tests/: bmp_tests.cpp  filters_tests.cpp  parsing_tests.cpp
utils/: bmp_reader.h  console_interface.h  exceptions.h  filters.h  image.h  processor.h
